# diamond-rs

./: Cargo.toml  README.md
examples/: test_line_iter.rs  test_read_line.rs  test_read_until.rs  test_reader.rs  test_reader_bufread.rs
examples/testing/: Makefile  e.txt  expected_all  expected_just_a  expected_single  f.txt  g.txt  j.txt  l.txt
src/: lib.rs
