[package]
name = "diamond_op"
version = "0.1.6"
authors = ["LiosK <contact@mail.liosk.net>"]
license = "Apache-2.0"
edition = "2024"
rust-version = "1.85"
description = "Perl-like diamond operator for Rust"
repository = "https://github.com/LiosK/diamond-rs"
documentation = "https://docs.rs/diamond_op"

[dependencies]

[package.metadata.docs.rs]
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
